--- a/CourseApp.Tests/CourseApp.Tests.csproj
+++ b/CourseApp.Tests/CourseApp.Tests.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <NoWarn>1573,1591,1701;1702;1705</NoWarn>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -11,11 +12,17 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>../stylecop/stylecop.ruleset</CodeAnalysisRuleSet>
+    <GenerateFullPaths>true</GenerateFullPaths>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CourseApp\CourseApp.csproj" />
+    <AdditionalFiles Include="../stylecop/stylecop.json" />
   </ItemGroup>
 
 </Project>
-<Project Sdk="Microsoft.NET.Sdk">
